page deputaty added

--- a/app/views/deputat_mailer/deputat_mail.html.slim
+++ b/app/views/deputat_mailer/deputat_mail.html.slim
@@ -1,8 +1,11 @@
 
-/p
-/  b> E-Mail:
-= @user_email
+p:b
+  ' Адрес оправителя:
+  = @email
+br
+p:b
+  ' Сообщение:
+  = @message
 
-/p.t-j
-/= @message[0]['message']
+
 
