--- a/app/views/layouts/widgets/_videos.html.slim
+++ b/app/views/layouts/widgets/_videos.html.slim
@@ -1,5 +1,5 @@
 .content-panel
-  h5.h-post Собрания Совета депутатов
+  h5.h-post Заседания Совета депутатов
   hr.hr-post
   .video-container
     .spinner
@@ -13,4 +13,4 @@
     = raw video.embed_html5({:frameborder => '0'})
   div.t-r
     hr.hr-post
-    a.link href='#{url_for :controller => 'posts', :action => 'videos'}' Видеоархив собраний СД
+    a.link href='#{url_for :controller => 'posts', :action => 'videos'}' Видеоархив заседаний СД
