--- a/app/views/layouts/widgets/_videos.html.slim
+++ b/app/views/layouts/widgets/_videos.html.slim
@@ -13,4 +13,4 @@
     = raw video.embed_html5({:frameborder => '0'})
   div.t-r
     hr.hr-post
-    a.link href='#{url_for :controller => 'posts', :action => 'videos'}' Видеоархив заседаний СД
+    a.link.t-uppercase href='#{url_for :controller => 'posts', :action => 'videos'}' Видеоархив заседаний СД
