--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -197,6 +197,16 @@ img {
   font-style: italic;
 }
 
+.t-uppercase {
+  text-transform: uppercase;
+  font-size: 11px;
+  letter-spacing: 1px;
+}
+
+.t-capitalize {
+  text-transform: capitalize;
+}
+
 .light {
   color: #757575;
   text-shadow: 0 1px 1px #fff;
@@ -229,10 +239,6 @@ hr {
   border: 1;
   border-top: 1px solid #D0D0D0;
   border-bottom: 1px solid #FFFFFF;
-}
-
-.capitalize {
-  text-transform: capitalize
 }
 
 
