--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -64,7 +64,7 @@ body,
 	left: 0;
 	z-index: 100;
 	visibility: hidden;
-	width:300px;
+	width:70%;
 	height: 100%;
 	background: image_url('satinweave.png');
 	-webkit-transition: all 0.5s;
@@ -175,8 +175,8 @@ body,
 
 /* Effect 3: Push*/
 .st-effect-3.st-menu-open .st-pusher {
-	-webkit-transform: translate3d(300px, 0, 0);
-	transform: translate3d(300px, 0, 0);
+	-webkit-transform: translate3d(70%, 0, 0);
+	transform: translate3d(70%, 0, 0);
 }
 
 .st-effect-3.st-menu {
