--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype
 html
   head
-    = favicon_link_tag
+    = favicon_link_tag '/favicon.ico'
     meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     title
       - unless yield(:title).blank?
