--- a/app/views/layouts/_widgets.html.slim
+++ b/app/views/layouts/_widgets.html.slim
@@ -3,3 +3,4 @@
     = render('layouts/widgets/categories')
 = render('layouts/widgets/newspapers')
 = render('layouts/widgets/videos')
+= render('layouts/widgets/institutions')
